--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,10 @@ stages:
       displayName: 'Use .NET SDK $(dotnetSdkVersion)'
       inputs:
         version: '$(dotnetSdkVersion)'
-
+  
     - task: Npm@1
-      displayName: 'Run npm install'
       inputs:
-        verbose: false
+        command: 'install'
 
     - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
       displayName: 'Compile Sass assets'
